[gd_scene load_steps=12 format=2]

[ext_resource path="res://Textures/FFFFORWA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.00392157, 0.0627451, 0.105882, 0.588235 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.00392157, 0.0627451, 0.105882, 0.784314 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.00392157, 0.0627451, 0.105882, 0.490196 )

[sub_resource type="DynamicFont" id=6]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.00392157, 0.0627451, 0.105882, 0.588235 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.00392157, 0.0627451, 0.105882, 0.784314 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.00392157, 0.0627451, 0.105882, 0.490196 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00392157, 0.0627451, 0.105882, 0.490196 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 91.0
margin_top = 37.0
margin_right = 227.0
margin_bottom = 139.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 136.0
margin_bottom = 102.0
custom_constants/separation = 5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 136.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Game Paused"
align = 1
valign = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 136.0
margin_bottom = 27.0

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 136.0
margin_bottom = 52.0
rect_min_size = Vector2( 125, 20 )
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Resume"

[node name="RestartBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 136.0
margin_bottom = 77.0
rect_min_size = Vector2( 125, 20 )
focus_mode = 0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Restart"

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 136.0
margin_bottom = 102.0
rect_min_size = Vector2( 125, 20 )
focus_mode = 0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "Quit"

[connection signal="button_up" from="CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/RestartBtn" to="." method="_on_RestartBtn_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_button_up"]
